scheduler cek device disconnect
