# backend/docs/swagger.yaml
@@ -244,6 +244,48 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/models.ErrorEnvelope'
+  /api/v1/devices/{id}/health:
+    get:
+      security:
+      - BearerAuth: []
+      produces:
+      - application/json
+      tags:
+      - Devices
+      summary: Histori status device
+      parameters:
+      - type: string
+        description: Device ID
+        name: id
+        in: path
+        required: true
+      - type: integer
+        default: 50
+        minimum: 1
+        maximum: 200
+        name: limit
+        in: query
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/models.DeviceHealthResponse'
+        '400':
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorEnvelope'
+        '401':
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorEnvelope'
+        '404':
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorEnvelope'
+        '500':
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorEnvelope'
   /api/v1/locations:
     get:
       security:
@@ -515,6 +557,17 @@ definitions:
       message:
         type: string
         example: Device updated successfully
+  models.DeviceHealthResponse:
+    type: object
+    properties:
+      data:
+        type: array
+        items:
+          $ref: '#/definitions/models.DeviceStatusHistory'
+      device_id:
+        type: string
+      total:
+        type: integer
   models.DeviceListResponse:
     type: object
     properties:
@@ -530,6 +583,17 @@ definitions:
         type: integer
       total_page:
         type: integer
+  models.DeviceStatusHistory:
+    type: object
+    properties:
+      created_at:
+        type: string
+      device_id:
+        type: string
+      id:
+        type: string
+      status:
+        type: string
   models.DevicePatch:
     type: object
     properties:
